TMP: Enable tracing for test runs

--- a/rel/overlay/etc/default.ini
+++ b/rel/overlay/etc/default.ini
@@ -564,3 +564,20 @@ min_priority = 2.0
 ;
 ; Jitter applied when checking for new job types.
 ;type_check_max_jitter_msec = 5000
+
+[tracing]
+enabled = true
+thrift_format = compact ; compact | binary
+agent_host = 127.0.0.1
+agent_port = 6831
+app_name = couchdb
+
+[tracing.samplers]
+
+http.request = all
+
+[tracing.http.request]
+
+all = (#{}) -> [report]
+
+
